# piano

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  servers.yaml  skills-lock.json
.bon/: items.jsonl  understanding.md
.bon/handoffs/: 2026-05-31-e4e05c51.md
.claude-plugin/: marketplace.json
deploy/systemd/: piano-ping.service  piano-tunnel.service
docs/: build-plan.md  stage1-tunnel.md
mcp/ping/src/ping_server/: __init__.py
plugins/couvert/.claude-plugin/: plugin.json
plugins/couvert/mcp/ping/: pyproject.toml
plugins/couvert/mcp/ping/src/ping_server/: server.py
plugins/couvert/skills/couvert/: SKILL.md
scripts/: bump.py  flatten.py  render-configs.py  smoke_ping.py  smoke_ping_http.py  version.py
