[project]
name = "ping-server"
version = "0.1.0"
description = "Trivial diagnostic MCP — proves the transport (stdio + streamable-HTTP)."
requires-python = ">=3.10"
dependencies = ["mcp>=1.2"]

[project.scripts]
ping-server = "ping_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ping_server"]
